navbar and font color update

--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -1,7 +1,7 @@
 /* components/Navbar.module.css */
 
 .navbar {
-  background-color: #ecfcc2;
+  background-color: 		#9E9D24;
   color: #070707;
   padding: 20px 0; /* Yüksekliği artırarak daha büyük yapın */
   text-align: center;
