--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -5,7 +5,7 @@
   margin: 0 auto;
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.9); /* Beyaz ve hafif transparan bir arka plan rengi */
-  margin-top: 110px; /* Projemiz başlığını Navigation barın altına çekmek için bir üst boşluk ekleyin */
+  margin-top: 300px; /* Projemiz başlığını Navigation barın altına çekmek için bir üst boşluk ekleyin */
 }
 
 .heading {
@@ -29,4 +29,10 @@
 .contentSection p {
   font-size: 16px;
   line-height: 1.5;
+}
+
+
+.pageContainer {
+  position: relative;
+  padding-bottom: 80px; /* Footer yüksekliği kadar alan bırakın */
 }
